# kachkojir

./: .gitmodules  CMakeLists.txt  readme.md
firmware/: CMakeLists.txt
firmware/include/: app_config.hpp  boot_mode.hpp  debug_leds.hpp  storage_mode.hpp  tusb_config.h  usb_msc_mode.hpp
firmware/sd_bridge/: CMakeLists.txt  build.sh
firmware/sd_bridge/include/: app_config.hpp  app_state.hpp  tusb_config.h  usb_gamepad_host.hpp
firmware/sd_bridge/src/: hw_config.cpp  main.cpp  usb_descriptors.c
firmware/src/: boot_mode.cpp  debug_leds.cpp  hw_config.cpp  main.cpp  storage_mode.cpp  usb_descriptors.c  usb_descriptors_msc_sample.c  usb_descriptors_normal.c  usb_gamepad_host.cpp  usb_mass_storage_sample_hw_config.c  usb_mass_storage_sample_main.c  usb_mass_storage_sample_msc_disk.c  usb_mass_storage_sample_usb_descriptors.c  usb_msc_mode.cpp
